--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.5",
     "@material-tailwind/react": "2.0.6",
+    "@mui/material": "^5.14.3",
     "@nivo/bar": "^0.83.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
