--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.14.2",
+    "react-step-progress-bar": "^1.0.3",
     "victory": "^36.6.11",
     "yup": "^1.2.0"
   },
