--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "payment": "^2.4.6",
     "react": "^18.2.0",
     "react-credit-cards-2": "^1.0.1",
+    "react-currency-input-field": "^3.6.11",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.14.2",
+    "react-spinners": "^0.13.8",
     "react-step-progress-bar": "^1.0.3",
     "victory": "^36.6.11",
     "yup": "^1.2.0"
