--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^6.14.2",
     "react-spinners": "^0.13.8",
     "react-step-progress-bar": "^1.0.3",
+    "react-table": "^7.8.0",
     "victory": "^36.6.11",
     "yup": "^1.2.0"
   },
