redesign: new transfer table; remove: transfer stat card, old transfer table; minor: other minor functionalities and/or designs change here and there;

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.5",
     "@material-tailwind/react": "2.0.6",
+    "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "@nivo/bar": "^0.83.0",
     "axios": "^1.4.0",
@@ -22,6 +23,7 @@
     "formik": "^2.4.2",
     "jwt-decode": "^3.1.2",
     "luhn": "^2.4.1",
+    "nextjs-toploader": "^1.4.2",
     "payment": "^2.4.6",
     "react": "^18.2.0",
     "react-credit-cards-2": "^1.0.1",
