--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.14.2",
+    "react-scale-text": "^1.2.2",
     "react-spinners": "^0.13.8",
     "react-step-progress-bar": "^1.0.3",
     "react-table": "^7.8.0",
