--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@heroicons/react": "^2.0.18",
     "@material-tailwind/react": "2.0.6",
+    "@mui-treasury/utils": "^0.4.1",
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.3",
     "@nivo/bar": "^0.83.0",
@@ -35,6 +36,7 @@
     "react-scale-text": "^1.2.2",
     "react-spinners": "^0.13.8",
     "react-step-progress-bar": "^1.0.3",
+    "react-switch": "^7.0.0",
     "react-table": "^7.8.0",
     "victory": "^36.6.11",
     "yup": "^1.2.0"
