--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.1",
     "credit-card-type": "^9.1.0",
+    "flowbite": "^1.8.1",
     "formik": "^2.4.2",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
